Roll back unnecessary changes to PinnedQueryBuilder