@@ -13,7 +13,6 @@ import org.apache.lucene.search.DisjunctionMaxQuery;
 import org.apache.lucene.search.MatchNoDocsQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.util.NumericUtils;
-import org.apache.lucene.util.SetOnce;
 import org.elasticsearch.TransportVersion;
 import org.elasticsearch.common.ParsingException;
 import org.elasticsearch.common.Strings;
@@ -40,7 +39,7 @@ import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.optionalConstructorArg;
@@ -58,19 +57,13 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     private static final ParseField DOCS_FIELD = new ParseField("docs");
     public static final ParseField ORGANIC_QUERY_FIELD = new ParseField("organic");
 
-    // Note: For this POC I'm only focusing on IDs to showcase how we'll rewrite queries based off rules.
-    // In a production implementation we'd support rewriting pinned queries with both ids and docs.
-    private final Supplier<List<String>> ids;
+    private final List<String> ids;
     private final List<Item> docs;
     private QueryBuilder organicQuery;
 
     // Organic queries will have their scores capped to this number range,
     // We reserve the highest float exponent for scores of pinned queries
     private static final float MAX_ORGANIC_SCORE = Float.intBitsToFloat((0xfe << 23)) - 1;
-
-    public PinnedQueryBuilder(QueryBuilder organicQuery, Supplier<List<String>> ids) {
-        this(organicQuery, ids.get(), null);
-    }
 
     /**
      * A single item to be used for a {@link PinnedQueryBuilder}.
@@ -218,10 +211,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
                 }
             }
         }
-
-        SetOnce<List<String>> idSupplier = new SetOnce<>();
-        idSupplier.set(ids);
-        this.ids = idSupplier::get;
+        this.ids = ids;
         this.docs = docs;
     }
 
@@ -231,13 +221,10 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     public PinnedQueryBuilder(StreamInput in) throws IOException {
         super(in);
         if (in.getTransportVersion().before(TransportVersion.V_7_15_0)) {
-            List<String> pinnedIds = in.readStringList();
-            ids = () -> pinnedIds;
-
+            ids = in.readStringList();
             docs = null;
         } else {
-            List<String> pinnedIds = in.readOptionalStringList();
-            ids = () -> pinnedIds;
+            ids = in.readOptionalStringList();
             docs = in.readBoolean() ? in.readList(Item::new) : null;
         }
         organicQuery = in.readNamedWriteable(QueryBuilder.class);
@@ -246,9 +233,9 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     @Override
     protected void doWriteTo(StreamOutput out) throws IOException {
         if (out.getTransportVersion().before(TransportVersion.V_7_15_0)) {
-            out.writeStringCollection(this.ids.get());
+            out.writeStringCollection(this.ids);
         } else {
-            out.writeOptionalStringCollection(this.ids.get());
+            out.writeOptionalStringCollection(this.ids);
             if (docs == null) {
                 out.writeBoolean(false);
             } else {
@@ -273,7 +260,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         if (this.ids == null) {
             return Collections.emptyList();
         }
-        return Collections.unmodifiableList(this.ids.get());
+        return Collections.unmodifiableList(this.ids);
     }
 
     /**
@@ -295,7 +282,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         }
         if (ids != null) {
             builder.startArray(IDS_FIELD.getPreferredName());
-            for (String value : ids.get()) {
+            for (String value : ids) {
                 builder.value(value);
             }
             builder.endArray();
@@ -342,12 +329,12 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     @Override
     protected QueryBuilder doRewrite(QueryRewriteContext queryRewriteContext) throws IOException {
         QueryBuilder newOrganicQuery = organicQuery.rewrite(queryRewriteContext);
-        // if (newOrganicQuery != organicQuery) {
-        PinnedQueryBuilder result = new PinnedQueryBuilder(newOrganicQuery, ids.get(), docs);
-        result.boost(this.boost);
-        return result;
-        // }
-        // return this;
+        if (newOrganicQuery != organicQuery) {
+            PinnedQueryBuilder result = new PinnedQueryBuilder(newOrganicQuery, ids, docs);
+            result.boost(this.boost);
+            return result;
+        }
+        return this;
     }
 
     @Override
@@ -356,7 +343,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         if (idField == null) {
             return new MatchNoDocsQuery("No mappings");
         }
-        List<Item> items = (docs != null) ? docs : ids.get().stream().map(Item::new).toList();
+        List<Item> items = (docs != null) ? docs : ids.stream().map(id -> new Item(id)).collect(Collectors.toList());
         if (items.isEmpty()) {
             return new CappedScoreQuery(organicQuery.toQuery(context), MAX_ORGANIC_SCORE);
         } else {
